# docai-benchmarks

./: .gitignore  cord.ipynb  pyproject.toml  utils.py
configs/donut/: eval.yml
configs/layoutlmv3/: eval.yml  eval_azure.yml  train.yml  train_20gb.yml  train_40gb.yml
data/: azure.py  cord_token_classification.py  utils.py
donut/: eval.py
layoutlmv3/: eval.py  inference.py  train.py
