[tool.poetry]
name = "docai-benchmark"
version = "0.1.0"
description = ""
authors = ["Simone Eandi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
datasets = "^2.21.0"
gdown = "^5.2.0"
pillow = "^10.4.0"
transformers = {extras = ["torch"], version = "^4.44.2"}
clearml = "^1.16.4"
evaluate = "^0.4.2"
loguru = "^0.7.2"
numpy = "<2.0"
seqeval = "^1.2.2"
shapely = "^2.0.6"
zss = "^1.2.0"
nltk = "^3.9.1"
sentencepiece = "^0.2.0"
azure-ai-documentintelligence = "^1.0.0b4"
python-dotenv = "^1.0.1"
protobuf = "^5.28.0"
torch = "2.2.2"
huggingface-hub = "^0.24.7"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
